added index.js and some modification to css

--- a/index.html
+++ b/index.html
@@ -66,12 +66,15 @@
             </label>
             <label>
                 PDF File
-                <input type="file" accept="PDF/*" multiple>
+                <input type="file" accept="PDF/*" multiple/>
             </label>
 
            <button type="submit">Send</button>
        </form>
     </footer>
+
+    <script src="./index.js"></script>
+
 </body>
 
 </html>
